--- a/honeytoast-app/package.json
+++ b/honeytoast-app/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react-dom": "^19.1.5",
+    "axios": "^1.10.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
