--- a/honeytoast-app/package.json
+++ b/honeytoast-app/package.json
@@ -14,6 +14,8 @@
     "@types/node": "^16.18.126",
     "@types/react-dom": "^19.1.5",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
+    "react-date-range": "^2.0.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
@@ -44,11 +46,14 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^19.1.6"
+    "@types/date-fns": "^2.5.3",
+    "@types/react": "^19.1.6",
+    "@types/react-date-range": "^1.4.10"
   },
   "overrides": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "typescript": "^5.8.3"
-  }
+  },
+  "proxy": "http://localhost:8800/api"
 }
