--- a/honeytoast-app/package.json
+++ b/honeytoast-app/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^19.1.5",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "openai": "^5.10.2",
     "react-date-range": "^2.0.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
