--- a/honeytoast-app/package.json
+++ b/honeytoast-app/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-
-    "@fullcalendar/daygrid": "^6.1.18",
-    "@fullcalendar/multimonth": "^6.1.18",
-    "@fullcalendar/react": "^6.1.18",
-
     "@cameratajs/react-date-range-input": "^1.0.10",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fullcalendar/daygrid": "^6.1.18",
+    "@fullcalendar/multimonth": "^6.1.18",
+    "@fullcalendar/react": "^6.1.18",
     "@mui/material": "^7.2.0",
+    "@mui/x-data-grid": "^8.9.1",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.8",
